feat(routes-gen): implemented routes-gen and remix driver

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,6 @@ node_modules
 # testing
 coverage
 
-# next.js
-.next/
-out/
-build
-
 # misc
 .DS_Store
 *.pem
@@ -31,3 +26,6 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+# build
+dist
