--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,13 +1,9 @@
 {
   "name": "config",
-  "version": "0.0.0",
-  "main": "index.js",
+  "version": "1.0.0",
   "license": "MIT",
   "files": [
-    "eslint-preset.js"
-  ],
-  "dependencies": {
-    "eslint-config-next": "^12.0.7",
-    "eslint-config-prettier": "^8.3.0"
-  }
+    "rollup.js",
+    "tsconfig.json"
+  ]
 }
