--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,6 +2,7 @@
   "name": "config",
   "version": "0.1.0",
   "license": "MIT",
+  "private": true,
   "files": [
     "rollup.js",
     "tsconfig.json"
