--- a/packages/routes-gen/package.json
+++ b/packages/routes-gen/package.json
@@ -4,6 +4,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/sandulat/routes-gen",
+    "directory": "packages/routes-gen"
+  },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch",
