--- a/packages/routes-gen/package.json
+++ b/packages/routes-gen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "routes-gen",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "README.md"
   ],
   "bin": {
-    "routes-gen": "dist/index.js"
+    "routes-gen": "dist/cli.js"
   },
   "dependencies": {
     "chalk": "^4.1.2",
