--- a/packages/routes-gen/package.json
+++ b/packages/routes-gen/package.json
@@ -22,10 +22,12 @@
     "routes-gen": "dist/cli.js"
   },
   "dependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "config": "*",
     "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
     "meow": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "config": "*"
   }
 }
