--- a/packages/routes-gen/package.json
+++ b/packages/routes-gen/package.json
@@ -21,11 +21,13 @@
   "bin": {
     "routes-gen": "dist/cli.js"
   },
-  "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "config": "*",
+  "dependencies": {
     "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
     "meow": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "config": "*"
   }
 }
