--- a/packages/routes-gen/package.json
+++ b/packages/routes-gen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "routes-gen",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "fs-extra": "^10.0.0",
     "meow": "^9.0.0"
   },
