--- a/packages/routes-gen-remix/package.json
+++ b/packages/routes-gen-remix/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@routes-gen/remix",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -25,6 +25,6 @@
     "config": "*"
   },
   "peerDependencies": {
-    "remix": "^1.0.0"
+    "@remix-run/dev": "^1.0.3"
   }
 }
