--- a/packages/routes-gen-remix/package.json
+++ b/packages/routes-gen-remix/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@routes-gen/remix",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -22,6 +22,7 @@
     "routes-gen": "*"
   },
   "devDependencies": {
+    "@remix-run/dev": "^1.0.3",
     "config": "*"
   },
   "peerDependencies": {
