use @nirtamir2/solid-start and use publish script without removing solid-start

--- a/packages/routes-gen-solid-start/package.json
+++ b/packages/routes-gen-solid-start/package.json
@@ -19,11 +19,11 @@
     "README.md"
   ],
   "dependencies": {
+    "@nirtamir2/solid-start": "^0.0.1",
     "routes-gen": "*"
   },
   "devDependencies": {
-    "config": "*",
-    "@nirtamir2/solid-start": "^0.0.1"
+    "config": "*"
   },
   "peerDependencies": {
     "@nirtamir2/solid-start": "^0.0.1"
