--- a/packages/routes-gen-solid-start/package.json
+++ b/packages/routes-gen-solid-start/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@routes-gen/routes-gen-solid-start",
-  "version": "0.0.1",
+  "name": "@routes-gen/solid-start",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
