--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.7",
     "esbuild": "^0.14.10",
+    "esbuild-jest": "^0.5.0",
     "fs-extra": "^10.0.0",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
