--- a/packages/routes-gen-remix/package.json
+++ b/packages/routes-gen-remix/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@routes-gen/remix",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -26,6 +26,6 @@
     "config": "*"
   },
   "peerDependencies": {
-    "@remix-run/dev": "^1.0.3"
+    "@remix-run/dev": "^1.0.3 || ^2.0.0"
   }
 }
